<resources>
    <string name="app_name">Log in</string>
    <string name="design_textview">Design</string>
    <string name="twitter_textview">Twitter</string>
    <string name="facebook_textview">Facebook</string>
    <string name="qualification_textview">Qualification</string>
    <string name="design_still_studing">design:still studing</string>
    <string name="mobile_no_8899467743">Mobile no:8899467743</string>
    <string name="addr_vijaypur">Addr:Vijaypur</string>
    <string name="email_shilpaghalimath_gmail_com">Email: shilpaghalimath@gmail.com</string>
    <string name="facebook_chitty_s_g">Facebook:chitty s g</string>
    <string name="qualification_be">Qualification: BE</string>
    <string name="submit">Submit</string>
</resources>
